@@ -1,3 +1,7 @@
+2012-08-19 Massimo Manghi <mxmanghi@apache.org>
+    * src/apache-2/mod_rivet.c: the module returns now a HTTP_INTERNAL_SERVER_ERROR when a request
+    namespace cannot be created
+
 2012-08-16 Massimo Manghi <mxmanghi@apache.org>
     * src/rivetPkgInit.c: improved namespace structure pointer handling (contributed by
     Georgios Petasis)
